istio/service-mesh-require-run-as-nonroot/.chainsaw-test/bad.yaml
apiVersion: v1
kind: Pod
metadata:
  name: bad01
spec:
  containers:
  - name: busybox
    image: busybox:1.35
    args:
    - sleep
    - infinity
    securityContext:
      runAsNonRoot: true
---
apiVersion: v1
kind: Pod
metadata:
  name: bad02
spec:
  containers:
  - name: istio-init
    image: docker.io/istio/proxyv2:1.22.0
    args:
        - istio-iptables
        - -p
        - "15001"
        - -z
        - "15006"
        - -u
        - "1337"
        - -m
        - REDIRECT
        - -i
        - '*'
        - -x
        - ""
        - -b
        - '*'
        - -d
        - 15090,15021,15020
        - --log_output_level=default:info
    securityContext:
      allowPrivilegeEscalation: false
      capabilities:
        add:
          - NET_ADMIN
          - NET_RAW
        drop:
          - ALL
      privileged: false
      readOnlyRootFilesystem: false
      runAsGroup: 0
      runAsNonRoot: false
      runAsUser: 0
