istio/service-mesh-require-run-as-nonroot/.chainsaw-test/good.yaml
apiVersion: v1
kind: Pod
metadata:
  name: good01
spec:
  containers:
  - name: busybox
    image: busybox:1.35
    args:
    - sleep
    - infinity
    securityContext:
      runAsNonRoot: true
